--- a/hung-style.css
+++ b/hung-style.css
@@ -6,3 +6,14 @@
 .hung-caption2 {
     font-size: 20px;
 }
+
+.hung-about-us {
+    text-align: center;
+    background-image: url(https://voir.ca/voir-content/uploads/2019/03/atwatercc22-1~1475.jpg);
+    min-height: 500px;
+    color: white;
+    padding-left: 30%;
+    padding-right: 30%;
+    height: 100%;
+    padding-top: 100px;
+}
