--- a/hung-style.css
+++ b/hung-style.css
@@ -1,19 +1,25 @@
-.hung-caption {
-    font-weight: bold;
-    font-size: 50px;
-}
-
-.hung-caption2 {
-    font-size: 20px;
-}
-
-.hung-about-us {
-    text-align: center;
-    background-image: url(https://voir.ca/voir-content/uploads/2019/03/atwatercc22-1~1475.jpg);
-    min-height: 500px;
-    color: white;
-    padding-left: 30%;
-    padding-right: 30%;
-    height: 100%;
-    padding-top: 100px;
-}
+        .hung-caption {
+            font-weight: bold;
+            font-size: 50px;
+        }
+        
+        .hung-caption2 {
+            font-size: 20px;
+        }
+        
+        .hung-about-us {
+            text-align: center;
+            /*background-image: url(https://voir.ca/voir-content/uploads/2019/03/atwatercc22-1~1475.jpg);*/
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url(https://voir.ca/voir-content/uploads/2019/03/atwatercc22-1~1475.jpg);
+            min-height: 500px;
+            color: white;
+            padding-left: 30%;
+            padding-right: 30%;
+            height: 100%;
+            padding-top: 100px;
+        }
+        
+        .hung-box {
+            /*background-color: rgba(0, 0, 0, 0.65);*/
+            padding: 20px;
+        }
