--- a/css/chinh-style.css
+++ b/css/chinh-style.css
@@ -1,13 +1,10 @@
 html,
 body {
+    font-family: Montserrat, sans-serif;
+    font-weight: lighter;
     margin: 0;
     padding: 0;
     width: 100%;
-}
-
-body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: lighter;
 }
 
 header {
