--- a/hung-style.css
+++ b/hung-style.css
@@ -23,3 +23,38 @@
     /*background-color: rgba(0, 0, 0, 0.65);*/
     padding: 20px;
 }
+
+.an-row {
+    display: flex;
+    justify-content: space-between;
+    /* border: 1px solid white; */
+}
+
+.an-img {
+    width: 300px;
+    height: 480px;
+    margin: 50px 150px 50px 150px;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid red; */
+}
+
+.an-div {
+    background-color: black;
+    color: whitesmoke;
+}
+
+.an-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* border: 1px solid yellow; */
+    text-align: center;
+    margin-right: 150px;
+    margin-left: 150px;
+}
+
+h1 {
+    font-size: 50px;
+}
