--- a/css/chinh-style.css
+++ b/css/chinh-style.css
@@ -19,7 +19,7 @@ header {
     position: fixed;
     float: left;
     margin: 16px 46px;
-    color: #fff;
+    color: #ffffff;
     font-weight: bold;
     font-size: 20px;
     letter-spacing: 2px;
@@ -36,7 +36,7 @@ nav ul {
     list-style: none;
     background: rgba(0, 0, 0, 0);
     overflow: hidden;
-    color: #fff;
+    color: #ffffff;
     padding: 0;
     text-align: right;
     margin: 0;
@@ -68,8 +68,21 @@ nav ul li a {
     box-sizing: border-box;
     padding: 15px 24px;
     cursor: pointer;
-    color: #fff;
+    color: #ffffff;
     display: none;
+}
+
+li>.navbar-item {
+    text-decoration: none;
+    transition-delay: 0.3s;
+    transition-property: all;
+    transition-duration: 0.5s;
+}
+
+li>.navbar-item:hover {
+    background-color: lightsteelblue;
+    border-radius: 40px;
+    width: 40px;
 }
 
 @media(max-width: 786px) {
@@ -80,10 +93,10 @@ nav ul li a {
     }
     nav ul {
         max-height: 0px;
-        background: #000;
+        background: #000000;
     }
     nav.black ul {
-        background: #000;
+        background: #000000;
     }
     .showing {
         max-height: 34em;
