--- a/css/chinh-style.css
+++ b/css/chinh-style.css
@@ -30,6 +30,7 @@ nav {
     position: fixed;
     width: 100%;
     line-height: 60px;
+    z-index: 1;
 }
 
 nav ul {
@@ -56,7 +57,7 @@ nav ul li {
 }
 
 nav ul li a {
-    text-decoration: none;
+
     color: #fff;
     font-size: 16px;
 }
@@ -75,15 +76,17 @@ nav ul li a {
 
 li>.navbar-item {
     text-decoration: none;
-    transition-delay: 0.3s;
+    transition-delay: 0.1s;
     transition-property: all;
-    transition-duration: 0.5s;
+    transition-duration: 0.3s;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 li>.navbar-item:hover {
-    background-color: lightsteelblue;
+    background-color: #CFD186;
     border-radius: 40px;
-    width: 40px;
+    box-shadow: 3px white;
 }
 
 @media(max-width: 786px) {
@@ -113,6 +116,10 @@ li>.navbar-item:hover {
     }
 }
 
+.menu .navbar-item:hover {
+    letter-spacing: 3px;
+}
+
 header>.container {
     display: flex;
     flex-direction: column;
@@ -135,13 +142,18 @@ header>.container {
     text-align: center;
     /*background-image: url(https://voir.ca/voir-content/uploads/2019/03/atwatercc22-1~1475.jpg);*/
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url(https://voir.ca/voir-content/uploads/2019/03/atwatercc22-1~1475.jpg);
-    min-height: 700px;
+    min-height: 800px;
     color: white;
     padding-left: 30%;
     padding-right: 30%;
     height: 100%;
     padding-top: 160px;
     background-repeat: none;
+}
+
+.jumbotron {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .hung-box {
