--- a/css/chinh-style.css
+++ b/css/chinh-style.css
@@ -155,8 +155,8 @@ button .click-me-btn:hover::after {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9)), url(https://voir.ca/voir-content/uploads/2019/03/atwatercc22-1~1475.jpg);
     min-height: 800px;
     color: white;
-    padding-left: 30%;
-    padding-right: 30%;
+    /* padding-left: 30%;
+    padding-right: 30%; */
     height: 100%;
     padding-top: 160px;
 }
@@ -172,7 +172,7 @@ button .click-me-btn:hover::after {
     background-color: rgb(245, 227, 227, .5);
     height: 150px;
     padding: none;
-    width: auto;
+    width: 600px;
     border-radius: 40px;
 }
 
