add profile author

--- a/css/chinh-style.css
+++ b/css/chinh-style.css
@@ -53,7 +53,6 @@ nav.black ul {
 nav ul li {
     display: inline-block;
     padding: 16px 40px;
-    ;
 }
 
 nav ul li a {
@@ -83,13 +82,30 @@ li>.navbar-item {
     font-weight: bold;
 }
 
-.menu .navbar-item:hover::before {
+.menu .navbar-item::before {
     content: "- ";
+    opacity: 0;
+    transition: all 0.5s;
+}
+
+.menu .navbar-item:hover::before {
+    opacity: 1;
+}
+
+.menu .navbar-item::after {
+    content: " -";
+    opacity: 0;
+    transition: all 0.5s;
 }
 
 .menu .navbar-item:hover::after {
-    content: " -";
+    opacity: 1;
 }
+
+.menu .navbar-item:hover {
+    color: wheat;
+}
+
 
 @media(max-width: 786px) {
     .logo {
@@ -118,11 +134,6 @@ li>.navbar-item {
     }
 }
 
-.menu .navbar-item:hover {
-    letter-spacing: 3px;
-    color: wheat;
-}
-
 header>.container {
     display: flex;
     flex-direction: column;
@@ -131,13 +142,34 @@ header>.container {
     padding-top: 300px;
 }
 
-button .click-me-btn:hover::before {
+button .click-me-btn::before {
     content: "- ";    
+    opacity: 0;
+    transition: 1s;
+}
+
+button .click-me-btn:hover::before {
+    opacity: 1;   
+}
+
+button .click-me-btn::after {
+    content: " -";    
+    opacity: 0;
+    transition: 1s;    
 }
 
 button .click-me-btn:hover::after {
-    content: " -";    
+    opacity: 1;
 }
+
+.scroll-stop .btn {
+    transition: transform 2s;
+}
+
+.scroll-stop .btn:hover {
+    transform: rotateX(360deg) scale(2);
+}
+
 
 .hung-caption {
     font-weight: bold;
@@ -159,6 +191,8 @@ button .click-me-btn:hover::after {
     padding-right: 30%; */
     height: 100%;
     padding-top: 160px;
+    transition-delay: 0.3s;
+    transition: ease;
 }
 
 .jumbotron {
@@ -172,7 +206,7 @@ button .click-me-btn:hover::after {
     background-color: rgb(245, 227, 227, .5);
     height: 150px;
     padding: none;
-    width: 600px;
+    max-width: 600px;
     border-radius: 40px;
 }
 
@@ -202,3 +236,18 @@ button .click-me-btn:hover::after {
 }
 
 
+.intro {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-top: 12%;
+    padding-bottom: 12%;
+}
+
+:root {
+    --red: #cd4541;
+  }
+  
+  .red {
+    color: var(--red);
+  }
