--- a/nhanstyle2.css
+++ b/nhanstyle2.css
@@ -1,14 +1,11 @@
-.nhan-wrapper-2 {
-  display: flex;
-  justify-content: center;
-  background-color: black;
+body {
+  margin: 0;
 }
 
 .nhan-menu-2 {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     padding-top: 20px;
-    max-width: 950px;
     background-color: black;
 }
 
@@ -59,6 +56,8 @@
     position: relative; 
     width: 300px;
     height: 450px;
+    margin-left: 20px;
+    margin-right: 20px;
     }
 
 .nhan-content {
@@ -80,11 +79,11 @@
     transition: .5s ease;
     background-color: rgb(138, 233, 14);
   }
-  .nhan-card-container-2:hover .overlay2 {
+  .nhan-card-container-2 .overlay2:hover {
     opacity: 0.6;
   }
 
-  .nhan-card-container-2:hover .overlay2 {
+  .nhan-card-container-2 .overlay2:hover {
       animation: nhan-card-2 2s infinite;
   }
 
