--- a/css/author.css
+++ b/css/author.css
@@ -33,7 +33,7 @@ h1{
     width: 100%;
     height: 0;
     border-radius: 50%;
-    background-color: #66da07e8;
+    background-color: rgb(111, 181, 54, 0.6);
     position: absolute;
     bottom: 135%;
     right: 0;
@@ -50,7 +50,7 @@ h1{
     width: 100%;
     height: 99%;
     border-radius: 50%;
-    background: #64e60d;
+    background-color: rgb(111, 181, 54, 0.6);
     position: absolute;
     top: 0;
     left: 0;
@@ -88,7 +88,7 @@ h1{
     width: 100%;
     padding: 0;
     margin:0;
-    background: #0a1aee;
+    background-color: rgb(2, 7, 34, 0.5);
     position: absolute;
     bottom: -100px;
     left: 0;
@@ -111,8 +111,13 @@ h1{
 
    }
    .our-team .social li a:hover{
-       color: #0a2ece;
+       color: rgb(2, 7, 34, 0.5);
        background: #f7f5ec;
        text-decoration: none;
 
    }
+
+.col-cards {
+    max-width: 270px;
+    margin-bottom: 20px;
+}
