--- a/css/author.css
+++ b/css/author.css
@@ -64,7 +64,7 @@ h1{
     transition: all 0.9s ease 0s;
 }
 .our-team:hover .pic img{
-    box-shadow: 0 0 0 14px #f7f5ec;
+    box-shadow: 0 0 0 14px antiquewhite;
     transform: scale(0.7);
 }
 .our-team .team-content{
@@ -108,6 +108,7 @@ h1{
     font-size: 17px;
     color: white;
     transition: all 0.5s ease 0s;
+    width: 40px;
 
    }
    .our-team .social li a:hover{
