--- a/css/chinh-style.css
+++ b/css/chinh-style.css
@@ -8,15 +8,13 @@ body {
 }
 
 header {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    /* background: url(/banner/bar-landing-logo.jpg) no-repeat 50% 50%;
-    background-size: cover; */
     overflow: hidden;
     background-size: cover;
     background-position: center;
     animation-name: background;
-    animation-duration: 24000ms;
+    animation-duration: 20000ms;
     animation-iteration-count: infinite;
 }
 
