--- a/css/minh_booking.css
+++ b/css/minh_booking.css
@@ -4,11 +4,11 @@
     box-sizing: border-box;
 }
 
-html, body {
+/* html, body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.7em;
-}
-
+} */
+/* 
 a {
     color: #333;
     text-decoration: none;
@@ -27,7 +27,7 @@ p {
     max-width: 1100px;
     overflow: auto;
     padding: 0 20px;
-}
+} */
 
 .text-primary {
     color: #f7c08a;
@@ -37,7 +37,7 @@ p {
     font-size: 20px;
 }
 
-.btn {
+/* .btn {
     display: inline-block;
     font-size: 18px;
     color: #fff;
@@ -45,9 +45,9 @@ p {
     padding: 13px 20px;
     border: none; 
     cursor: pointer;
-}
+} */
 
-.btn:hover {
+/* .btn:hover {
     background: #f7c08a;
     color: #333;
 }
@@ -82,7 +82,7 @@ p {
 
 .py-1 { padding: 10px 0; }
 .py-2 { padding: 20px 0; }
-.py-3 { padding: 30px 0; }
+.py-3 { padding: 30px 0; } */
 
 /* chinh le */
 .chinhle {
@@ -104,9 +104,6 @@ p {
     border-radius: 30px;
 }
 
-.row {
-    margin: 20px 20px 20px 20px;
-}
 
 .google-map {
 
@@ -268,7 +265,7 @@ p {
     height: 70px;
     position: absolute;
     bottom: 0;
-    margin-bottom: -308px;
+    /* margin-bottom: -308px; */
     display: flex;
     justify-content: space-around;
     width: 100vw;
