--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ list-style: none;
 margin: 0 7%;
 
 }
-.ul-icon-social li .fa{
+.ul-icon-social li .fab{
 font-size: 20px;
 color: #262626;
 line-height: 40px;
@@ -56,7 +56,7 @@ transform: rotate(0deg) skewX(-45deg);
 transform: perspective(1000px) rotate(-30deg) skew(25deg) translate(20px, -20px);
 box-shadow: -50px 50px 50px rgb(0, 0, 0, 0.5);
 }
-.ul-icon-social li:hover .fa{
+.ul-icon-social li:hover .fab{
 color: #ffffff;
 }
 .ul-icon-social li a:hover{
