--- a/nhanstyle.css
+++ b/nhanstyle.css
@@ -143,7 +143,7 @@
 .nhan-menu-1 {
     padding-top: 30px;
     background-color: rgb(20, 20, 18);
-    width: 950px;
+    /* width: 950px; */
 
   }
 
@@ -189,11 +189,7 @@
     justify-content: center;
     border-top: 2px solid orangered;
     border-bottom: 2px solid orangered;
-    margin-left: 300px;
-    margin-right: 300px;
-    margin-top: 130px;
-    margin-bottom: 130px;
-    padding: 20px 20px;
+
 }
 .nhan-rc {
     color: palegoldenrod !important;
