--- a/css/minh_booking.css
+++ b/css/minh_booking.css
@@ -9,35 +9,7 @@ html, body {
     line-height: 1.7em;
 }
 
-a {
-    color: #333;
-    text-decoration: none;
-}
-
-h1, h2, h3 {
-    padding-bottom: 20px;
-}
-
-p {
-    margin: 10px 0; 
-}
-
-.container {
-    margin: auto;
-    max-width: 1100px;
-    overflow: auto;
-    padding: 0 20px;
-}
-
-.text-primary {
-    color: #f7c08a;
-}
-
-.lead {
-    font-size: 20px;
-}
-
-.btn {
+.minh-btn {
     display: inline-block;
     font-size: 18px;
     color: #fff;
@@ -47,45 +19,12 @@ p {
     cursor: pointer;
 }
 
-.btn:hover {
+.minh-btn:hover {
     background: #f7c08a;
     color: #333;
 }
 
-.btn-light {
-    background: #f4f4f4;
-    color: #333;
-}
-
-.bg-dark {
-    background: #333;
-    color: #fff;
-}
-
-.bg-light {
-    background: #f4f4f4;
-    color: #333;
-}
-
-.bg-primary {
-    color: #333;
-    background: #f7c08a;
-}
-
-.clr {
-    clear: both;
-}
-
-.l-heading {
-    font-size: 40px;
-}
-
-.py-1 { padding: 10px 0; }
-.py-2 { padding: 20px 0; }
-.py-3 { padding: 30px 0; }
-
-/* chinh le */
-.chinhle {
+.minh {
     background-image: url('/img/bg1.png');
     background-size: cover;
     background-repeat: no-repeat;
@@ -98,7 +37,7 @@ p {
     width: 100%;
 }
 
-.request-chinh {
+.request-minh {
     border: 1px solid wheat;
     background-color: rgba(236, 218, 184, 0.2);
     border-radius: 30px;
@@ -260,7 +199,7 @@ p {
     cursor: pointer;
 }
 
-.bottom {
+.minh-bottom {
     text-align: center;
     background: #444;
     color: #fff;
@@ -274,6 +213,6 @@ p {
     width: 100vw;
 }
 
-.bottom p {
+.minh-bottom p {
     font-size: 15px;
 }
