--- a/css/minh_booking.css
+++ b/css/minh_booking.css
@@ -147,12 +147,8 @@ p {
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: nowrap;
-}
-
-.f .up .left .col {
-    margin: 0 30px;
 }
 
 .f .up .left .col ul {
@@ -166,21 +162,23 @@ p {
 
 .f .up .left .col ul li a {
     text-decoration: none;
+    /* color: #f4f4f4; */
     color: crimson;
 }
 
 .f .up .left .col ul li a:hover {
+    /* color: rgb(10, 240, 10); */
     color: #f4f4f4;
 }
 
 .f .up .right {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    width: auto;
-    height: 300px;
+    width: 40%;
     justify-content: flex-end;
     align-content: center;
+    margin-bottom: 135px;
     margin-top: 50px;
     margin-left: 100px;
 }
@@ -199,19 +197,11 @@ p {
     }
 }
 
-.f .up .right .pics {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: nowrap;
-    height: 100%;
+.right-item {
+    margin-left: 10px;
 }
 
-.f .up .right .pics .p {
-    margin-right: 60px;
-}
-
-.f .up .right .pics .bounce:hover {
+.right-item .bounce:hover {
     animation: bounceIn 2s;
 }
 
@@ -251,9 +241,6 @@ p {
 .f .down .right {
     margin-left: 200px;
     width: 20%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
 }
 
 .f .down .right ul li {
