--- a/css/minh_booking.css
+++ b/css/minh_booking.css
@@ -4,46 +4,12 @@
     box-sizing: border-box;
 }
 
-/* html, body {
+html, body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.7em;
-<<<<<<< HEAD
 }
 
 .minh-btn {
-=======
-} */
-/* 
-a {
-    color: #333;
-    text-decoration: none;
-}
-
-h1, h2, h3 {
-    padding-bottom: 20px;
-}
-
-p {
-    margin: 10px 0; 
-}
-
-.container {
-    margin: auto;
-    max-width: 1100px;
-    overflow: auto;
-    padding: 0 20px;
-} */
-
-.text-primary {
-    color: #f7c08a;
-}
-
-.lead {
-    font-size: 20px;
-}
-
-/* .btn {
->>>>>>> 24e7718b9eaa8b20f31f64ec918f5dedf2ba21af
     display: inline-block;
     font-size: 18px;
     color: #fff;
@@ -51,55 +17,14 @@ p {
     padding: 13px 20px;
     border: none; 
     cursor: pointer;
-} */
+}
 
-<<<<<<< HEAD
 .minh-btn:hover {
-=======
-/* .btn:hover {
->>>>>>> 24e7718b9eaa8b20f31f64ec918f5dedf2ba21af
     background: #f7c08a;
     color: #333;
 }
 
-<<<<<<< HEAD
 .minh {
-=======
-.btn-light {
-    background: #f4f4f4;
-    color: #333;
-}
-
-.bg-dark {
-    background: #333;
-    color: #fff;
-}
-
-.bg-light {
-    background: #f4f4f4;
-    color: #333;
-}
-
-.bg-primary {
-    color: #333;
-    background: #f7c08a;
-}
-
-.clr {
-    clear: both;
-}
-
-.l-heading {
-    font-size: 40px;
-}
-
-.py-1 { padding: 10px 0; }
-.py-2 { padding: 20px 0; }
-.py-3 { padding: 30px 0; } */
-
-/* chinh le */
-.chinhle {
->>>>>>> 24e7718b9eaa8b20f31f64ec918f5dedf2ba21af
     background-image: url('/img/bg1.png');
     background-size: cover;
     background-repeat: no-repeat;
@@ -113,14 +38,15 @@ p {
 }
 
 .request-minh {
-    border: 1px solid wheat;
+    border: 1px solid #f7c08a;
     background-color: rgba(236, 218, 184, 0.2);
     border-radius: 30px;
+    height: 85%;
+    padding-top: 20px;
 }
 
 
 .google-map {
-
     box-shadow: gray;
     align-items: center;
     display: flex;
@@ -147,8 +73,12 @@ p {
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: nowrap;
+}
+
+.f .up .left .col {
+    margin: 0 30px;
 }
 
 .f .up .left .col ul {
@@ -162,23 +92,21 @@ p {
 
 .f .up .left .col ul li a {
     text-decoration: none;
-    /* color: #f4f4f4; */
     color: crimson;
 }
 
 .f .up .left .col ul li a:hover {
-    /* color: rgb(10, 240, 10); */
     color: #f4f4f4;
 }
 
 .f .up .right {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    width: 40%;
+    width: auto;
+    height: 300px;
     justify-content: flex-end;
     align-content: center;
-    margin-bottom: 135px;
     margin-top: 50px;
     margin-left: 100px;
 }
@@ -197,11 +125,19 @@ p {
     }
 }
 
-.right-item {
-    margin-left: 10px;
+.f .up .right .pics {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    height: 100%;
 }
 
-.right-item .bounce:hover {
+.f .up .right .pics .p {
+    margin-right: 60px;
+}
+
+.f .up .right .pics .bounce:hover {
     animation: bounceIn 2s;
 }
 
@@ -241,6 +177,9 @@ p {
 .f .down .right {
     margin-left: 200px;
     width: 20%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .f .down .right ul li {
@@ -266,7 +205,7 @@ p {
     height: 70px;
     position: absolute;
     bottom: 0;
-    /* margin-bottom: -308px; */
+    margin-bottom: -308px;
     display: flex;
     justify-content: space-around;
     width: 100vw;
