--- a/css/minh_booking.css
+++ b/css/minh_booking.css
@@ -69,9 +69,9 @@
     flex-wrap: nowrap;
 }
 
-/* .f-minh .up-minh .left-minh .transform-minh img {
-    transform: rotate(-90deg) scale(1.5);
-} */
+.f-minh .up-minh .left-minh .transform-minh img {
+    width: 100px;
+}
 
 .f-minh .up-minh .left-minh .transform-minh {
     display: flex;
@@ -98,12 +98,6 @@
     color: #f4f4f4;
 }
 
-.f-minh .up-minh .right-minh {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-
 @keyframes bounceIn {
     0% {
       transform: scale(0.1);
@@ -118,24 +112,14 @@
     }
 }
 
-.f-minh .up-minh .right-minh .pics {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
 
-/* .f-minh .up-minh .right-minh .pics .p-minh {
-    max-width: 100px;
-} */
-
-.f-minh .up-minh .right-minh .pics-minh .bounce:hover {
+.right-minh .pics-minh .bounce:hover {
     animation: bounceIn 2s;
 }
 
 .f-minh .down-minh {
     display: flex;
     flex-wrap: nowrap;
-    width: 1300px;
 }
 
 .f-minh .down-minh .left-minh {
@@ -143,7 +127,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-end;
-    width: 80%;
+    /* width: 80%; */
 }
 
 .f-minh .down-minh .left-minh ul {
@@ -165,13 +149,11 @@
     color: rgb(10, 240, 10);
 }
 
-.f-minh .down-minh .right-minh {
-    margin-left: 200px;
-    width: 20%;
+/* .f-minh .down-minh .right-minh {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-}
+} */
 
 .f-minh .down-minh .right-minh ul li {
     list-style-type: none;
@@ -179,7 +161,6 @@
 }
 
 .f-minh .down-minh .right-minh ul .flag {
-    margin-left: 38px;
     color: #f4f4f4;
 }
 
