--- a/css/nhanstyle.css
+++ b/css/nhanstyle.css
@@ -74,20 +74,21 @@
 
 .nhan-text-block {
     font-size: 25px;
+    letter-spacing: 0.2rem;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     position: absolute;
     border: 2px solid white;
     color: blanchedalmond;
-    background-color: black;
+    background-color: rgba(36, 32, 32, .6);
     position: absolute;
     padding: 16px 16px;
     bottom: 210px;
-    left: 75px;
+    left: 60px;
 }
 
 .nhan-text-block-2 {
-    font-size: 25px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 29px;
+    font-family: Arial, Helvetica, sans-serif ;
     position: absolute;
     border: 2px solid white;
     color: blanchedalmond;
@@ -95,18 +96,18 @@
     position: absolute;
     padding: 16px 16px;
     bottom: 210px;
-    left: 60px;
+    left: 45px;
 }
 
 .nhan-text-block-3 {
     text-align: center;
     position: absolute;
-    font-size: 24px;
+    font-size: 40px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: peru;
+    background-color: rgba(185, 153, 121, .6);
     border-top: 2px solid purple;
     border-bottom: 2px solid purple;
-    bottom: 215px;
+    bottom: 200px;
     padding: 12px 12px;
     left: 39px;
 }
@@ -190,6 +191,8 @@
   }
 
 .nhan-collection {
+    margin-top: 80px;
+    padding: 20px 20px;
     font-size: 30px;
     display: flex;
     justify-content: center;
