--- a/css/minh_booking.css
+++ b/css/minh_booking.css
@@ -18,7 +18,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 800px;
+    /* height: 800px; */
     margin-bottom: 0;
 }
 
